cabal-version:      2.4
name:               yesod-middleware-csp
version:            1.2.0
author:             Jezen Thomas <jezen@supercede.com>
maintainer:         Jezen Thomas <jezen@supercede.com>
license:            MIT
license-file:       LICENSE
build-type:         Simple
description:
  Deals with CSP without disabling it.
  This is done by overriding the default yesod
  provided addScript functionalities and adding
  a nonce to the tag, and the right headers to the request.
homepage:           https://github.com/SupercedeTech/yesod-middleware-csp
bug-reports:        https://github.com/SupercedeTech/yesod-middleware-csp/issues
tested-with:        GHC == 9.10.3

extra-doc-files:
  changelog.md
  README.md

extra-source-files:
  test/static/js/*.js

category:           Web, Yesod
synopsis:           A middleware for building CSP headers on the fly

source-repository head
  type:     git
  location: https://github.com/SupercedeTech/yesod-middleware-csp.git

library
  default-language:   Haskell2010
  hs-source-dirs:     src
  ghc-options:        -Wall
  exposed-modules:    Yesod.Middleware.CSP
  build-depends:
      base               >= 4.14   && < 5
    , base64-bytestring  >= 1.0.0  && < 1.3
    , bytestring         >= 0.10   && < 0.13
    , containers         >= 0.6    && < 0.8
    , conduit            >= 1.3.1  && < 1.4
    , directory          >= 1.3.3  && < 1.4
    , filepath           >= 1.4.2  && < 1.6
    , http-client        >= 0.6.4  && < 0.8
    , network-uri        >= 2.6.1  && < 2.7
    , template-haskell   >= 2.14   && < 2.23
    , text               >= 1.2.3  && < 2.2
    , time               >= 1.8    && < 1.13
    , uuid               >= 1.3.13 && < 1.4
    , yesod              >= 1.6.0  && < 1.7
    , yesod-core         >= 1.6.16 && < 1.7
    , yesod-static       >= 1.6    && < 1.7

test-suite spec
  type:               exitcode-stdio-1.0
  default-language:   Haskell2010
  hs-source-dirs:     test
  ghc-options:        -Wall
  main-is:            Spec.hs
  build-depends:
      base
    , bytestring
    , case-insensitive
    , containers
    , fast-logger
    , hspec
    , http-types
    , text
    , wai-extra
    , yesod
    , yesod-core
    , yesod-static
    , yesod-test
    , yesod-middleware-csp

  other-modules:
    ExampleApp
    TestImport
    Yesod.Middleware.CSPSpec
